qt_add_library(chat
    STATIC
    backend.cpp
    message.cpp
    model.cpp
)

target_include_directories(chat
    PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
)

target_link_libraries(chat PRIVATE
    libs::project_options
    libs::project_warnings
)

target_link_system_libraries(chat PRIVATE
    Qt::Core Qt::Network)

add_library(libs::chat ALIAS chat)